# Interstonar

./: .gitignore  CMakeLists.txt  Makefile  README.md  a  intersonar
.github/workflows/: mirror.yml
include/: InterException.hpp  Intersonar.hpp  Interstonar.hpp  ParseConfigFile.hpp  Parsing.hpp  Vector3D.hpp
include/Astre/: AType.hpp  Astre.hpp  IType.hpp  TypeBox.hpp  TypeCylinder.hpp  TypeSphere.hpp  TypeTorus.hpp
public/: help.txt
src/: Interstonar.cpp  Main.cpp  Parsing.cpp  Vector3D.cpp
src/Astre/: Astre.cpp  TypeBox.cpp  TypeCylinder.cpp  TypeSphere.cpp  TypeTorus.cpp
src/Parsing/: ParseConfigFile.cpp  ParseConfigFileCommands.cpp  ParseConfigFileTypes.cpp  Parsing.cpp
tests/: testsArgsParsing.cpp  testsFilesParsing.cpp  testsGlobalMode.cpp  testsLocalMode.cpp  tests_base.cpp  tests_parsing.cpp
tests/example/: global_scene_example.toml  infinite_cylinder.toml  local_scene_example.toml
tests/testFiles/: NotANumber.toml  NotAString.toml  NotAVector3D.toml  NotStartWritting.toml  SameName.toml  UnknowType.toml  WrongArgs.toml
tests/testResult/: global_scene_exemple_fail.txt  infinite_cylinder.txt  local_scene_example_intersection.txt  local_scene_example_outOfScene.txt
